change the login api

--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
 		</tr>-->
 		<tr>
 			<th></th>
-			<td><input type="button"  class="btn" name=" " id="submit" value="提交申请" /><a href="http://www.umtrack.com">取消</a></td>
+			<td><input type="button"  class="btn" name=" " id="submit" value="登&emsp;录" /><a href="http://www.umtrack.com">取消</a></td>
 		</tr>
 	</table>
 </div>
