--- a/templates/login.html
+++ b/templates/login.html
@@ -81,7 +81,7 @@
 					}else{
 						if(data == "0"){
 							alert_msg("用户名或密码错误！");
-						}else if(dara == "-1"){
+						}else{
 							alert_msg("非法操作！");
 						}
 					}
