--- a/templates/channels.html
+++ b/templates/channels.html
@@ -2,7 +2,7 @@
 <!-- 正文 start -->
 <div class="umengADsystem_container">
 	<!-- 主标题start -->
-	<div class="umengADsystem_title_primary"><a href="/apps">&lt;&lt;返回应用列表</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="issue_box_href">进入Issue Box&gt;&gt;</a> </div>
+	<div class="umengADsystem_title_primary"><a href="/apps">&lt;&lt;返回应用列表</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="issue_box_href">进入Issue Box&gt;&gt;</a>--> </div>
 	<!-- 主标题end -->
 	
 	<!-- 信息面板start -->
@@ -220,7 +220,6 @@
 		<p class="umengADsystem_align_center" style="margin-top:3px; color:#AAA;">请按下Ctrl+C进行复制</p>
 </div>
 <!-- pop end -->
-<input type="hidden" id="userid" userid="<%=@user.id.to_s%>" />
 </body>
 <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
 <script src="/javascripts/ios_channels/jquery.zclip.min.js" type="text/javascript"></script>
