--- a/templates/rejected.html
+++ b/templates/rejected.html
@@ -1,7 +1,9 @@
 {%include 'header.html'%}
 <div class="prompt">
-	<p class="text_1">这款工具目前采用邀请制:</p>
-	<a href="/register" class="btn">申请使用</a>
+	<p class="text_1">对不起，您的申请未被通过，如有疑问请联系：</p>
+	<p class="text_2">support@umeng.com</p>
+	<p style="position: absolute;top: 220px;padding: 0 165px;">请务必提供以下信息：公司名称、应用名称、应用描述、友盟账户（如果没有可以写想要注册的账号和密码），以方便我们审核你的资质。感谢你对友盟产品的支持！</p>
+	<a href="/logout" class="link_return">返回首页</a>
 </div>
 <h2 class="main_title">谁在用</h2>
 <div class="inuse">
