--- a/templates/register.html
+++ b/templates/register.html
@@ -4,26 +4,28 @@
 	<table width="800" border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<th width="150">友盟账户</th>
-			<td><input type="text" class="input_text" id="userName" name=" " value="" /><span class="notice" style="display:inline">请填写友盟账户(已注册)</span></td>
+			<td><input type="text" class="input_text" id="userName" name=" "{%if userName%} readonly="readonly"{%endif%} value="" /><span class="notice" {%if userName%}{%else%}style="display:inline"{%endif%}>请填写友盟账户(已注册)</span></td>
 		</tr>
-		<!--<tr>
+        {%if userName%}{%else%}
+		<tr>
 			<th>密码</th>
 			<td><input type="password" class="input_text" id="userPwd" name=" " value="" /><span class="notice">请填写密码</span></td>
 		</tr>
-		<tr>
+        {%endif%}
+		<!--<tr>
 			<th>确认密码</th>
 			<td><input type="password" class="input_text" id="userRepwd" name=" " value="" /><span class="notice">两次密码输入不一致</span></td>
 		</tr>-->
 		<tr>
-			<th>应用名称</th>
+			<th>应用名称（可选）</th>
 			<td><input type="text" class="input_text" name=" " id="appName" value="" /><span class="notice">应用名称不能为空</span></td>
 		</tr>
 		<tr>
-			<th>应用appstore地址</th>
+			<th>应用appstore地址（可选）</th>
 			<td><input type="text" class="input_text" name=" " id="appUrl" value="" /><span class="notice">应用appstore地址不能为空</span></td>
 		</tr>
 		<tr>
-			<th>联系人邮箱</th>
+			<th>联系人邮箱（可选）</th>
 			<td><input type="text" class="input_text" name=" " id="email" value="" /><span class="notice">邮箱不能为空</span></td>
 		</tr>
 		<tr>
@@ -55,6 +57,7 @@
 <script src="/javascripts/ios_channels/jquery.blockUI-2.39.js" type="text/javascript"></script>
 <script src="/javascripts/ios_channels/pageload.js" type="text/javascript"></script>
 <script type="text/javascript">
+	$("#userName").val("{{userName}}");
     $(".input_text").change(function(e) {
         checkVal(this);
     });
@@ -71,19 +74,52 @@
 	     	$(".input_text").each(function(e,i){
 	     		val = val?val+"&":"";
 	     		val = val+$(this).attr("id")+"="+$.trim($(this).val());
-	    	});   		
-			$.getJSON(window.ajaxBaseUrl+"/users/register/?"+val+"&callback=?",
-				function(data){
-					if(data.status == 0){
-						alert_msg("系统繁忙，请稍后再试");
-					}else if(data.status < 0){
-						alert_msg("用户名已被占用，请更换！");
-					}else if(data.status == 1){
-						window.location.href="/prompt";
-					}else{
-						alert_msg("未知错误！请稍后再试");
+	    	}); 
+			{%if userName%}
+				$.getJSON(window.ajaxBaseUrl+"/users/register/?"+val+"&callback=?",
+					function(data){
+						if(data.status == 0){
+							alert_msg("系统繁忙，请稍后再试");
+						}else if(data.status < 0){
+							alert_msg("用户名已被占用，请更换！");
+						}else if(data.status == 1){
+							window.location.href="/prompt";
+						}else{
+							alert_msg("未知错误！请稍后再试");
+						}
+				});
+			{%else%}
+				$.ajax({
+					type:'POST',
+					url:"/users/",
+					data: val,
+					success: function(data){
+						if(data == "1"){
+							$.getJSON(window.ajaxBaseUrl+"/users/register/?"+val+"&callback=?",
+								function(data){
+									if(data.status == 0){
+										alert_msg("系统繁忙，请稍后再试");
+									}else if(data.status < 0){
+										alert_msg("用户名已被占用，请更换！");
+									}else if(data.status == 1){
+										window.location.href="/prompt";
+									}else{
+										alert_msg("未知错误！请稍后再试");
+									}
+							});
+						}else{
+							if(data == "0"){
+								alert_msg("用户名或密码错误！");
+							}else{
+								alert_msg("非法操作！");
+							}
+						}
+	
 					}
-			});
+					
+				});		   		
+			{%endif%}
+			  		
     	}
     });
     function checkVal(input){
@@ -98,6 +134,11 @@
 	    		}
 	    		if(!value){
 	    			res = "帐号不能为空";
+	    		}
+	    		break;
+    		case "userPwd":
+	    		if(!value){
+	    			res = "密码不能为空";
 	    		}
 	    		break;
 	    	case "appName":
