--- a/templates/stylesheets/ios_channels/portal.css
+++ b/templates/stylesheets/ios_channels/portal.css
@@ -393,6 +393,26 @@ marquee p {
 	box-shadow:1px 1px 0 #fff;
 	text-align:center;
 }
+.prompt .btn{
+	position:absolute;
+	bottom:93px;
+	left:50%;
+	margin-left:-80px;
+	width:160px;
+	height:50px;
+	line-height:50px;
+	text-align:center;
+	color:#465517;
+	border:none;
+	font-size:18px;
+	font-weight:bold;
+	text-shadow:1px 1px 1px #fff;
+	display:inline-block;
+	background:#B3D34C;
+	border-radius:10px;
+	box-shadow:0px 0px 1px #ccc;
+}
+
 .prompt .link_return:hover{
 	color:#005378;
 }
