--- a/templates/pending.html
+++ b/templates/pending.html
@@ -5,19 +5,7 @@
 	<p style="position: absolute;top: 220px;padding: 0 165px;">感谢你对友盟产品的支持！</p>
 	<a href="/logout" class="link_return">返回首页</a>
 </div>
-<h2 class="main_title">谁在用</h2>
-<div class="inuse">
-	<ul class="list">
-		<li><a href="http://itunes.apple.com/cn/app/id416048305?mt=8" target="_blank"><img src="/images/ios_channels/app_meitu.png" width="115" height="115" alt="美图秀秀" />美图秀秀</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/yin-yue-tai/id527477885?mt=8" target="_blank"><img src="/images/ios_channels//app_yinyuetai.png" width="114" height="114" alt="音悦台" />音悦台</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/mo-ji-tian-qi-guan-fang/id434209233?mt=8" target="_blank"><img src="/images/ios_channels/app_moji.png" width="115" height="115" alt="墨迹天气" />墨迹天气</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/id483336353?mt=8" target="_blank"><img src="/images/ios_channels/app_ttpod.png" width="115" height="115" alt="ttpod" />天天动听</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/id466386383?mt=8" target="_blank"><img src="/images/ios_channels/app_buyu.png" width="114" height="114" alt="捕鱼生涯" />捕鱼生涯</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/zhan-san-guo/id504491972?mt=8&ign-mpt=uo%3D4" target="_blank"><img src="/images/ios_channels/app_zhansanguo.png" width="114" height="114" alt="战三国" />战三国</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/chang-ba-ni-de-shou-jiktv/id509885060?mt=8" target="_blank"><img src="/images/ios_channels/app_changba.png" width="114" height="114" alt="唱吧" />唱吧</a></li>
-	</ul>
-</div>
-<a class="feed_back_all" target="_blank" href="/feedback">反馈</a>
+{% include 'who_used.html'%}
 {%include 'bottom.html'%}
 </body>
 <script type="text/javascript">
