--- a/templates/apps.html
+++ b/templates/apps.html
@@ -1,6 +1,15 @@
 {%include 'header.html'%}
 <!-- 正文 start -->
 <div class="umengADsystem_container">
+	<!-- 面包屑start -->
+	<div class="umengADsystem_breadcrumbs">
+		<ul>
+			<li class="first_child current"><span class="caption">第一步：创建应用</span><span class="second">监控从创建要监控的应用开始</span></li>
+			<li><span class="caption">第二步：创建渠道</span><span class="second">应用需要嵌入代码、创建推广渠道、发布渠道链接、查看监控数据</span></li>
+			<li class="last_child"><span class="caption">第三步：渠道报表</span><span class="second">查看渠道监控数据</span></li>
+		</ul>
+	</div>
+	<!-- 面包屑end -->
 	<!-- 主标题start -->
 	<div class="umengADsystem_title_primary">应用列表 </div>
 	<!-- 主标题end -->
