--- a/templates/bottom.html
+++ b/templates/bottom.html
@@ -1,3 +1,4 @@
+<a class="feed_back_all" target="_blank" href="/feedback">反馈</a>
 <div class="footer">
 	<div class="list clearfix">
 		<dl class="first">
