--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 	<table width="800" border="0" cellspacing="0" cellpadding="0">
 		<tr>
 			<th width="150">友盟账户</th>
-			<td><input type="text" class="input_text" id="userName" name=" "{%if userName%} readonly="readonly"{%endif%} value="" /><span class="notice" {%if userName%}{%else%}style="display:inline"{%endif%}>请填写友盟账户(已注册)</span></td>
+			<td><input type="text" class="input_text" id="userName" name=" "{%if userName%} readonly{%endif%} value="" /><span class="notice" {%if userName%}{%else%}style="display:inline"{%endif%}>请填写友盟账户(已注册)</span></td>
 		</tr>
         {%if userName%}{%else%}
 		<tr>
@@ -38,18 +38,7 @@
 		</tr>
 	</table>
 </div>
-<h2 class="main_title">谁在用</h2>
-<div class="inuse">
-	<ul class="list">
-		<li><a href="http://itunes.apple.com/cn/app/id416048305?mt=8" target="_blank"><img src="/images/ios_channels/app_meitu.png" width="115" height="115" alt="美图秀秀" />美图秀秀</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/yin-yue-tai/id527477885?mt=8" target="_blank"><img src="/images/ios_channels//app_yinyuetai.png" width="114" height="114" alt="音悦台" />音悦台</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/mo-ji-tian-qi-guan-fang/id434209233?mt=8" target="_blank"><img src="/images/ios_channels/app_moji.png" width="115" height="115" alt="墨迹天气" />墨迹天气</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/id483336353?mt=8" target="_blank"><img src="/images/ios_channels/app_ttpod.png" width="115" height="115" alt="ttpod" />天天动听</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/id466386383?mt=8" target="_blank"><img src="/images/ios_channels/app_buyu.png" width="114" height="114" alt="捕鱼生涯" />捕鱼生涯</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/zhan-san-guo/id504491972?mt=8&ign-mpt=uo%3D4" target="_blank"><img src="/images/ios_channels/app_zhansanguo.png" width="114" height="114" alt="战三国" />战三国</a></li>
-		<li><a href="http://itunes.apple.com/cn/app/chang-ba-ni-de-shou-jiktv/id509885060?mt=8" target="_blank"><img src="/images/ios_channels/app_changba.png" width="114" height="114" alt="唱吧" />唱吧</a></li>
-	</ul>
-</div>
+{% include 'who_used.html'%}
 {% include 'bottom.html'%}
 </body>
 <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
