fixed logout bug

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -116,7 +116,7 @@ function checkUser(e,to){
 	<div class="umengADsystem_header_main">
 		<div class="umengADsystem_header_logo" style="width:120px;"><a href="http://www.umtrack.com">UMtrack </a></div>
 		<a href="/admin"  class="umengADsystem_header_logo" style="display: block;line-height: 55px;color: #333;font-weight: bold;font-size: 22px;text-shadow: 2px 2px white;">OP</a>
-		<div style="float: right;margin-top: 25px;"><a href="/users/sign_out">退出登陆</a></div>
+		<div style="float: right;margin-top: 25px;"><a href="/logout">退出登陆</a></div>
 		<nav><a href="/admin">数据</a><a href="/admin?user=all">用户</a></nav>
 		<div class="umtrack_search"><form method ="get"><input type="text" name="appname" /><input type="submit" value="搜索" /></form></div></div>
 	</div>
