--- a/templates/apps.html
+++ b/templates/apps.html
@@ -150,7 +150,7 @@ $(function(){
 					load.loadStart();
 					load.makeAjax(options,function(o,data){
 						load.loadEnd();
-						o.find('tbody').append('<tr id="'+data.appkey+'"><td class="umengADsystem_align_left"><a  href="/channels?app_key='+data.appkey+'" class="copy_link">'+name+'</a></td><td><div style="width:810px; overflow:hidden; word-warp:break-all;">'+url+'</div></td><td><a onclick="delApp(\''+data.appkey+'\',\''+name+'\')" class="ui-icon ui-icon-circle-close"></a></td></tr>');
+						o.find('tbody').append('<tr id="'+data.appkey+'"><td class="umengADsystem_align_left"><a  href="/channels?app_key='+data.appkey+'" class="copy_link">'+name+'</a></td><td><div style="width:810px; overflow:hidden; word-warp:break-all;">'+url+'</div></td><td class="edit_btn"><a onclick="updateApp(\''+data.appkey+'\',\''+name+'\',\''+url+'\')" class="ui-icon ui-icon-pencil"></a></td><td class="del_btn"><a onclick="delApp(\''+data.appkey+'\',\''+name+'\')" class="ui-icon ui-icon-closethick"></a></td></tr>');
 					});
 					$('.umengADsystem_panel_pop input[name="appname"]').val('');
 					$('.umengADsystem_panel_pop input[name="appurl"]').val('');
