--- a/templates/stylesheets/ios_channels/default.css
+++ b/templates/stylesheets/ios_channels/default.css
@@ -145,7 +145,7 @@ marquee p {
 	color:#369!important;
 }
 .umengADsystem_font_gray {
-	color:#bbb!important;
+	color:#666!important;
 }
 .umengADsystem_font_bold {
 	font-weight:bold;
