--- a/templates/apps.html
+++ b/templates/apps.html
@@ -28,7 +28,7 @@
 					<tr>
 						<th>应用名称</th>
 						<th>url</th>
-						<th width="4%">编辑</th>
+						<th width="4%" class="hidden">编辑</th>
 						<th class="last" width="4%">删除</th>
 					</tr>
 				</thead>
@@ -171,6 +171,8 @@ $(function(){
 <script type="text/javascript" >
 //弹出start
 $('#creatNewApp').click(function() { 
+		$('.umengADsystem_panel_pop').find("input[type='text']").val("");
+		$('.umengADsystem_panel_pop').find(".tips_week_warning").hide();
         $.blockUI({ 
             message:  $('.umengADsystem_panel_pop'), 
             css: { 
