--- a/templates/stylesheets/default.css
+++ b/templates/stylesheets/default.css
@@ -144,7 +144,7 @@ marquee p {
 	color:#369!important;
 }
 .font_gray {
-	color:#bbb!important;
+	color:#999!important;
 }
 .font_bold {
 	font-weight:bold;
