--- a/templates/stylesheets/ios_channels/portal.css
+++ b/templates/stylesheets/ios_channels/portal.css
@@ -426,7 +426,7 @@ marquee p {
 	box-shadow:0px 0px 5px #ccc;
 }
 .inuse .list{
-	width:968px;
+	width:1968px;
 	height:171px;
 	padding:5px 0;
 	margin:0 auto;
@@ -526,6 +526,31 @@ marquee p {
 .register a{
 	font-size:14px;
 }
-.edit_btn{
-	display: none;
+.icon_tab{
+	height: 31px;
+	width: 72px;
+	margin: 10px 0px 10px 0px;
+	float: right;
+}
+.icon_tab_left{
+	width: 36px;
+	height: 31px;
+	background: url(../../images/ios_channels/tab.png) left center no-repeat;
+	float: left;
+	cursor: pointer;
+}
+.icon_tab_right{
+	width: 35px;
+	height: 31px;
+	background: url(../../images/ios_channels/tab.png) right center no-repeat;
+	float: left;
+	cursor: pointer;
+}
+.icon_tab_left:hover, .icon_tab_right:hover {
+	background-image: url(../../images/ios_channels/tab_hover.png);
+}
+.inuse_cover{
+	width:968px;
+	height:181px;
+	overflow: hidden;
 }
