--- a/templates/who_used.html
+++ b/templates/who_used.html
@@ -1,5 +1,6 @@
-<h2 class="main_title">谁在用</h2>
-<div class="inuse">
+<h2 class="main_title">谁在用<div class="icon_tab"><div class="icon_tab_left"></div><div class="icon_tab_right"></div></div></h2>
+
+<div class="inuse"><div class="inuse_cover">
 	<ul class="list">
 		<li><a href="http://itunes.apple.com/cn/app/id416048305?mt=8" target="_blank"><img src="/images/ios_channels/app_meitu.png" width="115" height="115" alt="美图秀秀" />美图秀秀</a></li>
 		<li><a href="http://itunes.apple.com/cn/app/yin-yue-tai/id527477885?mt=8" target="_blank"><img src="/images/ios_channels//app_yinyuetai.png" width="114" height="114" alt="音悦台" />音悦台</a></li>
@@ -8,6 +9,18 @@
 		<li><a href="http://itunes.apple.com/cn/app/id466386383?mt=8" target="_blank"><img src="/images/ios_channels/app_buyu.png" width="114" height="114" alt="捕鱼生涯" />捕鱼生涯</a></li>
 		<li><a href="http://itunes.apple.com/cn/app/zhan-san-guo/id504491972?mt=8&ign-mpt=uo%3D4" target="_blank"><img src="/images/ios_channels/app_zhansanguo.png" width="114" height="114" alt="战三国" />战三国</a></li>
 		<li><a href="http://itunes.apple.com/cn/app/chang-ba-ni-de-shou-jiktv/id509885060?mt=8" target="_blank"><img src="/images/ios_channels/app_changba.png" width="114" height="114" alt="唱吧" />唱吧</a></li>
-		<li><a href="http://itunes.apple.com/us/app/tong-cheng-lu-you-jing-dian/id475966832?mt=8" target="_blank"><img src="/images/ios_channels/app_tongchenglvyou.png" width="114" height="114" alt="唱吧" />同程旅游</a></li>
+		<li><a href="http://itunes.apple.com/us/app/tong-cheng-lu-you-jing-dian/id475966832?mt=8" target="_blank"><img src="/images/ios_channels/app_tongchenglvyou.png" width="114" height="114" alt="同程旅游" />同程旅游</a></li>
+		<li><a href="https://itunes.apple.com/cn/app/jin-ri-tou-tiao-ni-zui-xiang/id529092160?mt=8" target="_blank"><img src="/images/ios_channels/app_jinritoutiao.png" width="114" height="114" alt="今日头条" />今日头条</a></li>
 	</ul>
-</div>
+</div></div>
+<script src="/javascripts/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(function(){
+	$(".icon_tab_left").click(function(){
+		$("ul.list").animate({marginLeft:"0px"});
+	});	
+	$(".icon_tab_right").click(function(){
+		$("ul.list").animate({marginLeft:"-120px"});
+	});
+})
+</script>
