--- a/templates/admin.html
+++ b/templates/admin.html
@@ -114,7 +114,7 @@ function checkUser(e,to){
 <!-- 独立头部 start -->
 <div class="umengADsystem_header">
 	<div class="umengADsystem_header_main">
-		<div class="umengADsystem_header_logo" style="width:120px;"><a href="http://www.umtrack.com">UMtrack </a></div>
+		<div class="umengADsystem_header_logo" style="width:120px;"><a href="/index">UMtrack </a></div>
 		<a href="/admin"  class="umengADsystem_header_logo" style="display: block;line-height: 55px;color: #333;font-weight: bold;font-size: 22px;text-shadow: 2px 2px white;">OP</a>
 		<div style="float: right;margin-top: 25px;"><a href="/logout">退出登陆</a></div>
 		<nav><a href="/admin">数据</a><a href="/admin?user=all">用户</a></nav>
