--- a/templates/bottom.html
+++ b/templates/bottom.html
@@ -35,7 +35,7 @@
 		<dl class="fifth">
 			<dt><span class="caption"><a href="http://www.umeng.com/lab" target="_blank">友盟实验室</a></span></dt>
 			<dd><a href="http://www.umeng.com/lab" target="_blank">Android渠道打包工具</a></dd>
-			<dd><a href="http://www.umtrack.com/" target="_blank">iOS渠道激活统计工具</a></dd>
+			<dd><a href="/index" target="_blank">iOS渠道激活统计工具</a></dd>
 		</dl>
 		<dl class="sixth">
 			<dt><span class="caption"><a href="http://www.umeng.com/aboutus_about">关于我们</a></span></dt>
